# ATHENA

./: .gitignore  LICENSE  README.md
.athena/: PROJECT_STATE.md  ROADMAP.md  TEAM.md
backend/: .dockerignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
backend/api/: __init__.py  health.py  router.py  versioning.py
backend/app/: __init__.py  main.py
backend/application/: __init__.py  container.py  dependencies.py  wiring.py
backend/config/: __init__.py  settings.py
backend/core/: __init__.py  exception_handlers.py  exceptions.py  lifespan.py  logging.py  openapi.py
backend/domain/: __init__.py
backend/infrastructure/: __init__.py
backend/intelligence/: __init__.py
backend/interfaces/: __init__.py
backend/middleware/: __init__.py  request_context.py  request_id.py
backend/orchestrator/: __init__.py
backend/repositories/: __init__.py
backend/schemas/: __init__.py  health.py
backend/shared/: __init__.py
backend/tests/: __init__.py  test_application_core.py  test_health.py
backend/websocket/: __init__.py
backend/workers/: __init__.py
docs/: 00_PROJECT_CHARTER.md  01_VISION.md  02_MASTER_SPECIFICATION.md  03_SYSTEM_ARCHITECTURE.md  04_AGENT_SPECIFICATIONS.md  05_DATABASE_DESIGN.md  06_BACKEND_ARCHITECTURE.md
